--- a/po/zh-cn/syncthing.po
+++ b/po/zh-cn/syncthing.po
@@ -1,8 +1,14 @@
 msgid "Syncthing"
-msgstr "Syncthing"
+msgstr "储存同步"
 
 msgid "Syncthing Synchronization Tool"
 msgstr "Syncthing 存储同步工具"
+
+msgid "Open Syncthing page"
+msgstr "打开存储同步页面"
+
+msgid "Enabled"
+msgstr "启用"
 
 msgid "GUI access address"
 msgstr "GUI访问地址"
